--- a/templates/base.html
+++ b/templates/base.html
@@ -342,7 +342,8 @@
         <!-- BEGIN SIDEBAR MENU -->
         <ul class="page-sidebar-menu">
           {% for tab in tabs %}
-              <li id="id_{{tab.name}}" class="start">
+              <li id="id_{{tab.name}}" class="start sidemenuitem">
+                <i class="fa fa-caret-left maxminButton hidden" style="position: absolute;color: gray !important;z-index: 9;right: 0;"></i>
                 <a href="{{ tab.url }}" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="fa fa-{{tab.icon}}"></i>
                 <span class="title">
@@ -604,6 +605,30 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
  <script type="text/javascript">  
       function loadCSS(e,n,o,t){"use strict";var d=window.document.createElement("link"),i=n||window.document.getElementsByTagName("script")[0],s=window.document.styleSheets;return d.rel="stylesheet",d.href=e,d.media="only x",t&&(d.onload=t),i.parentNode.insertBefore(d,i),d.onloadcssdefined=function(n){for(var o,t=0;t<s.length;t++)s[t].href&&s[t].href.indexOf(e)>-1&&(o=!0);o?n():setTimeout(function(){d.onloadcssdefined(n)})},d.onloadcssdefined(function(){d.media=o||"all"}),d}
        loadCSS( "/static/build/css/asyn_styles.min.css" );
+       $( ".maxminButton" ).click(function() {
+          if ($('.page-sidebar-menu .title').hasClass('sideWithoutText')) {
+            console.log("in hass class");
+            $('.page-sidebar-menu .title').removeClass('sideWithoutText');
+            $(".page-sidebar-menu").css('width','160px');
+            $(".page-content").css('marginLeft','190px');
+          }else{
+            console.log("in remove class");
+            $('.page-sidebar-menu .title').addClass('sideWithoutText');
+            $(".page-sidebar-menu").css('width','50px');
+            $(".page-content").css('marginLeft','80px');
+          };
+          
+        });
+       $( ".sidemenuitem" ).hover(
+          function() {
+            var el=$( this ).find( ".maxminButton" );
+              el.removeClass('hidden');
+          }, function() {
+            var el=$( this ).find( ".maxminButton" );
+              el.addClass('hidden');
+
+          }
+        );
  </script>
 
   
