--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -31,6 +31,11 @@
               <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
                 {{ _("Calendar")}}
               </h2>
+              <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
+                <a class="headerBtn" title="Refresh" ng-click="refreshCurrent();"> 
+                      <i class="fa fa-repeat" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
+                </div>
         </div>
             <a  id="new_event" class="btn red newAccountBtnOnscroll pull-right"  data-toggle="modal" ng-click="newEventisClicked()">
              <i class="fa fa-calendar"></i>{{ _(" New ")}}<span class="hidden-xs hiddenOnxs">{{ _(" Event")}}</span>
