--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -241,6 +241,12 @@
                </ul>
           </div>
         </div>
+               <div class="row">
+                                      <p class="col-md-11  list-group-item-text" style="  margin-left: 10px; margin-top: -20px;">
+                                         <span ng-show="task.created_by">{{ _('Opened by:')}}<a href="/#/admin/users/show/<%=task.created_by.google_user_id %>"> <%= task.created_by.display_name %></a></span>
+                                          <span ng-show="task.about">{{ _('related to') }}<a href="<%= getUrl(task.about.kind,task.about.id); %>"> <%= task.about.name %></a> </span>
+                                      </p>
+                                      </div>
         <!-- HADJI HICHAM HH-21/10/2014 Attach files ! -->
          <!-- begin -->
              <div class="form-group">
