fix a bug on last updated date on cases_list page
Former-commit-id: e4155b28bbe35921efd68135be0633c976540edb [formerly f19a2b82c9d530a173fdcad1d8ca1ce7d5d3c0dc] [formerly e6aaa9adbc7143e77af9cabe9598f4987c0ddc65 [formerly 9e3e7caad4439ffb8ab83d65d4a13ec8311399c1]]
Former-commit-id: 796e3cba81793a68405287984e02b37db6dea689 [formerly f18726d2a8b57e696c8fbe1ad1fce688d7059073]
Former-commit-id: 0fce60156b77b3bb620c904d3e3086016b8be36c

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -434,7 +434,7 @@
                             <span style="color:<%=getStatusColor(casee.current_status.name)%>"><%= casee.current_status.name %></span>
                         </td>
                         <td style=" font-size: 11px; ">
-                          <%=fromNow(opportunity.updated_at)%>
+                          <%=fromNow(casee.updated_at)%>
                         </td>
                     </tr>                    
                 </tbody>
