fix the bug of sending email
Former-commit-id: 3d3b2c7504d14bfc3488dd11cbe6908880788098 [formerly 301b4a1def90cc6b383325fe6279d488d2cf1926] [formerly 323ccde0afaf3d75af470fb2ba69ac614efc38cb [formerly fbc43cc39a6d7342c908c40a1218303497a55a50]]
Former-commit-id: bb1301ef641e2fc3d6280e0445d89cb7f8dd41a5 [formerly 8cbfea05c009097f5d9cb8b45107047b9d1c5687]
Former-commit-id: 8dba0053439fa9ec205d5821eb12e7e21ae2bb17

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1013,7 +1013,7 @@
 
                                 </div>
                                 <!-- $ send email tab -->
-                                <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 8">
+                               <!--  <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 8">
                                     <div class="showPage">
                                         <div class="row">
                                             <div class="col-md-12  margin-bottom-10">
@@ -1051,7 +1051,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- $ opportunities tab -->
                 <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 5" style="display: none;">
 
@@ -2000,7 +2000,7 @@ margin-top: 20px" />
                                             ng-model="email.subject">
                                     </div>
                                     <div class="form-group text-form-group">
-                                        <textarea id="some-textarea1" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control" rows="7" ng-model="email.body"></textarea>
+                                        <textarea id="some-textarea" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control" rows="7" ng-model="email.body"></textarea>
                                     </div>
                                 </form>
                               </div>
