--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1538,7 +1538,7 @@
 
                       </div>
                 <!-- $ send email tab -->
-               <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 8">
+               <!-- <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 8">
 
                          <div class="showPage">
                            <div class="row">
@@ -1580,7 +1580,7 @@
                         </div>
                       </div>
                   </div>
-                    <!-- $ linkedin profile -->
+ -->                    <!-- $ linkedin profile -->
                                 <div class="tab-pane active" id="tab_1_9" ng-if="(selectedTab == 9)">
                                     <div class="row slimform">
                                       <div class="col-md-6">
@@ -2351,7 +2351,7 @@
                                             ng-model="email.subject">
                                     </div>
                                     <div class="form-group text-form-group">
-                                        <textarea id="some-textarea1" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control" rows="7" ng-model="email.body"></textarea>
+                                        <textarea id="some-textarea" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control" rows="7" ng-model="email.body"></textarea>
                                     </div>
                                 </form>
                               </div>
