Edit New issue Display the right time zone on settings ,fix #1820
Former-commit-id: f4384cd43f21e3b7e15bdea4208fa393666533ad [formerly ceb341662f2913525031b44199dc3c7712b9867a] [formerly 871b9673535dd9ec764fc193564013dbaca981f7 [formerly 7a4c40fae98a11e12fc606edef079b1b25f99b07]]
Former-commit-id: 208ab6b4f219c81d35f99cb59ddfcb1fec39c001 [formerly 73066ce82587ee360a9683baa96e4188af5fc442]
Former-commit-id: 91a983923f91d1e3e7076ae2d97fb0daa3a05e7a

--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -47,6 +47,7 @@
   <div  class="row">
     <div class="col-md-9">
      <input type="hidden" value="{{user.emailSignature |e}}" id="signature"/>
+     <input type="hidden" value="{{user.timezone}}" id="timezone_value"/>
       <div class="row">
         <div class="showPage custom-show margin-bottom-15  col-md-12">
           <div class="row margin-bottom-10">
@@ -348,7 +349,8 @@
               <h3>Time Zone</h3>
               <p>choose your timezone</b> </p>
               <form id="addMember" name="addaccount" class="form-horizontal">
-              <select id="timeZone">
+              <select id="timeZone" style="
+    width: 350px;">
   <option timeZoneId="1" gmtAdjustment="GMT-12:00" useDaylightTime="0" value="-12:00">(GMT-12:00) International Date Line West</option>
   <option timeZoneId="2" gmtAdjustment="GMT-11:00" useDaylightTime="0" value="-11:00">(GMT-11:00) Midway Island, Samoa</option>
   <option timeZoneId="3" gmtAdjustment="GMT-10:00" useDaylightTime="0" value="-10:00">(GMT-10:00) Hawaii</option>
@@ -433,6 +435,7 @@
   <option timeZoneId="82" gmtAdjustment="GMT+13:00" useDaylightTime="0" value="+13:00">(GMT+13:00) Nuku'alofa</option>
 </select>                     
         
+        <img src="/static/img/loading.gif" ng-show="isPatchingTimeZone"/>
                 <!-- <div  class="radio-list" >
                     <label>
                         <input type="radio" name="optionRadio" value="0" ng-model="user.gmail_to_lead_sync" ng-click="updateGmailSync(user,{{user.key.id()}});"/>
