time zone settings
Former-commit-id: 39524d7967142be3281e7f6d455e6ed0e7621e6f [formerly 16bc0118c458501b624eff137a5c9a7c9915e79e] [formerly adf1d45388d6e2ba4938416df5d59a307233660c [formerly b4961903a7c2e043ebfd3d955b8e0cff29a9562e]]
Former-commit-id: e277a8d56da7d5f11d7c69edb51b5ae46b0cef35 [formerly fa3625a2ee28b0c93c6a75b46745041887281c2f]
Former-commit-id: 5e07776d7740e72aa602e00868f0d15b252e3af6

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -237,7 +237,8 @@
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
     <div class="row">
-   
+   <input type="hidden" id="user_timezone" value="{{user.timezone}}"/>
+   <input type="hidden" id="user_language" value="{{user.language}}"/>
     <div class="col-md-12" ng-hide="selectedOption =='discover'">
       <div class="row subHeaderContainer">
         <div class="col-md-12">
