the new form of add event
Former-commit-id: 6cc87affff2f729e6f16c996903ac5947c6819e1 [formerly baf3106c6e222335ce9c86a5266644d6bf375157] [formerly c0a98edb05db62cff77d21c065baa22306bc21ed [formerly 15568a95028e69bd9f7387b815af74ebaf000a8c]]
Former-commit-id: c4d6cdeb958d8624e2a8c328ea23b0fd7592ecf0 [formerly be96cc059ff27993b3764769e961bf652a9d8ca1]
Former-commit-id: b9a6da291b40507fb423f3d9545a4b3a8db58366

--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -1079,12 +1079,12 @@
   color: rgb(108, 108, 108);
   border-radius: 3px !important;
   background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a href="" ng-click="deletePicked()" class=" calendar-close-invite"  style=" top: 2px !important;"></a></span> 
-     <ul  class="list-inline"style="list-style:none" ng-show="remindmeby">
+<!--      <ul  class="list-inline"style="list-style:none" ng-show="remindmeby">
                                                  <li> <strong> By:</strong> </li>
                                                  <li><input type="radio"  name="by" ng-model="method" value="email"> Email</li> 
                                                  <li><input type="radio" ng- name="by" ng-model="method" value="sms">SMS</li>
                                                 
-                                               </ul>
+                                               </ul> -->
   <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
     <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No notification</a></li>
     <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At time of event</a></li>
