add new form to task
Former-commit-id: d87521a212bf65c7a9786851d14bfb1d2bf2ed43 [formerly 3d0146d2956af7be5fe49ab3f3196651b7adf805] [formerly 062dab2908ac3d0008c9e24aedeaa2b7bcf760f4 [formerly 2c8d4cf36fe5163b91a12170d73c2f68bfa14558]]
Former-commit-id: 78e5a65d1b8cc26b480b1cfcdfa8a8e427e3a9e2 [formerly 7b195ee59dc0aba88bdbcae1a4658d4f15ceeee3]
Former-commit-id: 5c0268db400d5f2cffb38aa4f3d21408656dbc22

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -347,7 +347,7 @@
                                 <%=opportunity.closed_date | date:'yyyy-MM-dd - HH:mm:ss '%></span>
                                 <div ng-show="showStartsCalendar" class="input-icon">
                                      <i class="fa fa-calendar"></i>
-                                     <input cusdatetimepicker data-model="opportunity.closed_date" type="text" class="form-control" placeholder="{{ _('Click to change the estimated date')}}" value="" id="leadEventStartsAt">
+                                     <input cdatetimepicker data-model="opportunity.closed_date" type="text" class="form-control" placeholder="{{ _('Click to change the estimated date')}}" value="" id="leadEventStartsAt">
                                      </div>
                               </div>
                               <span  class="margin-bottom-15">
@@ -679,7 +679,7 @@
                                     <div class="col-md-12 margin-bottom-10">
                                       <div class="input-icon ">
                                         <i class="fa fa-calendar"></i>
-                                          <input cusdatetimepicker data-model="newTask.due" type="text" class="form-control" placeholder="{{_('Add a due date')}}" value="" id="leadEventStartsAt">
+                                          <input cdatetimepicker data-model="newTask.due" type="text" class="form-control" placeholder="{{_('Add a due date')}}" value="" id="leadEventStartsAt">
                                       </div>
                                     </div>
                                 </div>
