--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -560,7 +560,7 @@
                                     <div class="col-md-12 margin-bottom-10">
                                       <div class="input-icon ">
                                         <i class="fa fa-calendar"></i>
-                                          <input cusdatetimepicker data-model="newTask.due" type="text" class="form-control" placeholder="{{ _('Add a due date')}}" value="" id="leadEventStartsAt">
+                                          <input cdatetimepicker data-model="newTask.due" type="text" class="form-control" placeholder="{{ _('Add a due date')}}" value="" id="leadEventStartsAt">
                                       </div>
                                     </div>
                                 </div>
