updating the website and contacts apis
Former-commit-id: d0f9c702198dfe18218d0adde7e46beebe6852f4 [formerly d1ead0d3de28c398680d0e7b8fed771a41ea42c8] [formerly 0a8ebf3a3d4eeb4ca59653dc7abbe9ef8c945184 [formerly 3f78293fd3c237571212d0ec88aaa3d3faba0b31]]
Former-commit-id: b0431dd607191f93109184b5a1b75c277fb72fc2 [formerly f900130114be7b830066541162370f8497a66fa0]
Former-commit-id: 5a2d72b2b9a07b852a48f498f253921caba8e295

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -35,7 +35,7 @@ if (window.location.host != "localhost")
     <meta content="Lead generation and sales process organization" property="og:description">
     <title>A simple Social CRM for small business on Google, leads from linkedIn | ioGrow</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
-    <link href="http://storage.googleapis.com/iogrow-cdn/opt_files/welcome_files/site.min.css" rel="stylesheet">
+    <link href="https://s3-us-west-2.amazonaws.com/iogrow-cdn/site.min.css.gz" rel="stylesheet">
     <script async src="http://storage.googleapis.com/iogrow-cdn/opt_files/welcome_files/modernizr.js.gz">
 </script>
     <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
