--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -45,7 +45,7 @@
     </div>
   </div>
   <div  class="row">
-    <div class="col-md-9">
+    <div class="col-md-10">
      <input type="hidden" value="{{user.emailSignature |e}}" id="signature"/>
      <input type="hidden" value="{{user.timezone}}" id="timezone_value"/>
       <div class="row">
@@ -117,7 +117,7 @@
                                         </div>
                                         <div class="text">
                                             <div class="name">
-                                              <%=stage.name%>
+                                              <%=stage.stage_number%>- <%=stage.name%>
                                             </div>
                                              <div class="pitch">
                                                 <span>
@@ -490,7 +490,15 @@
                               <input type="text" class="form-control" required id="id_firstname" ng-model="oppstage.name">
 
 
-                            </div>
+                            </div>     
+                     <!--        <div class="form-group">
+                              <label  class="required control-label">{{_("Stage Order")}} *</label>
+
+
+                              <input type="text" class="form-control" required id="id_firstname" ng-model="oppstage.stage_number">
+
+
+                            </div> -->
                            <div class="form-group">
                               <label  class=" control-label">{{_("Probability")}}</label>
 
@@ -528,7 +536,15 @@
                               <input type="text"  class="form-control" required id="id_firstname" ng-model="oppstageedit.name">
 
 
-                            </div>
+                            </div>     
+               <!--              <div class="form-group">
+                              <label  class="required control-label">{{_("Stage Order")}} *</label>
+
+
+                              <input type="text"  class="form-control" required id="id_firstname" ng-model="oppstageedit.stage_number">
+
+
+                            </div> -->
                            <div class="form-group">
                               <label  class=" control-label">{{_("Probability")}}</label>
 
