--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -958,10 +958,10 @@
                     </div>
                     <div ng-hide="selectedPermisssions">
 
-                        <label style="font-size:17px !important">{{ _("You can't share")}} 
+                        <label style="font-size:17px !important">{{ _("You can not share")}} 
                             <span ng-show="selectedCards.length == 1">{{ _("this case")}}</span>
                             <span ng-show="selectedCards.length > 1">{{ _("these cases")}}</span>
-                          {{ _("you are not the owner")}} </label> <br>
+                          {{ _(" : you are not the owner")}} </label> <br>
                         <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
                     </div>
                     <hr ng-show="selectedPermisssions" ng-hide="selected_access=='public'"/>
