--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -1134,10 +1134,10 @@
                     </div>
                     <div ng-hide="selectedPermisssions">
 
-                        <label style="font-size:17px !important">{{ _("You can't share")}} 
+                        <label style="font-size:17px !important">{{ _("You can not share")}} 
                             <span ng-show="selectedCards.length == 1">{{ _("this opportunity")}}</span>
                             <span ng-show="selectedCards.length > 1">{{ _("these opportunities")}}</span>
-                          {{ _("you are not the owner")}} </label> <br>
+                          {{ _(" : you are not the owner")}} </label> <br>
                         <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
                     </div>
                     <hr ng-show="selectedPermisssions" ng-hide="selected_access=='public'"/>
