nex event form on lead, contact show
Former-commit-id: 7162486004fca8d45cbe4b6c539505d454cb4b37 [formerly 838c250266dcabb4e854ad8373a280becf042cf7] [formerly 16e8d263a94e4ac72da44ff343d2e2f8472719c0 [formerly 9866a030f15aea0758ff3db3548382ba61f6503e]]
Former-commit-id: 8c8ce6fdfd5f444cb659b9794a05858bbe65c4a9 [formerly 180b3411b825a2675839d14ce5e9b3466f50ed5a]
Former-commit-id: 84467c99ad755093f9d09c293773769af29bdda5

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -3354,8 +3354,7 @@
                                     <div class="row" style="margin-left:80px">
                                     <div class="col-md-2" style="border-right: 1px solid #C5C2C2;margin-right: 36px;height: 53px;">
                                     <div style="margin-top:15px">
-                                      all day <div class="customCheckbox " class="form-group" style="
-    margin-top: -14px;
+        all day <div class="customCheckbox " class="form-group" style="margin-top: -14px;
     margin-left: 41px;
 ">  
                             <input title="Select allday" type="checkbox" ng-model="allday" ng-click="checkallday()" id="allday">             
